# app_repository

./: .example.env  .gitignore  alembic.ini  api_doc.md  docker-compose.yaml  nginx.conf  pyproject.toml
auth/: .env_example  Dockerfile  README.md  alembic.ini  (+5 more)
shop/: Dockerfile  pyproject.toml
shop/app/: app.py  config.py
shop/app/migrations/: env.py  migration_models.py
shop/app/migrations/versions/: 902037a23b16_added_salt_column.py  97a8fc285b42_.py
shop/app/modules/notifications/: settings.py
shop/app/modules/notifications/users_notifications/_repositories/confirmation_email_sender_repo/: __init__.py  confirmation_email_sender_repo.py  proto.py
shop/app/modules/notifications/users_notifications/services/confirmation_email_sender/: __init__.py  _consts.py  confirmation_email_sender.py  proto.py
shop/app/modules/notifications/utils/: __init__.py
shop/app/modules/notifications/utils/email_sender/: __init__.py  email_sender_repo.py
shop/app/modules/users/: consts.py  depends.py  module.py  settings.py
shop/app/modules/users/auth/_handlers/token_handlers/: __init__.py  models.py  token_handlers.py
shop/app/modules/users/auth/_repositories/models/: token_payload.py
shop/app/modules/users/auth/_repositories/token_processor/: __init__.py  proto.py  token_processor.py
shop/app/utils_backend/auth/: authorize.py
shop/app/utils_backend/redis/: base_redis_repo.py
shop/app/utils_backend/sql_alchemy/: base_alchemy_repo.py  base_model.py
shop/docker/: start_service.sh
test_service/: Dockerfile  app.py  pyproject.toml
test_service/api/v1/: test_handlers.py
(+121 files in other folders)
