[tool.poetry]
name = "test-service"
version = "0.1.0"
description = ""
authors = ["vitaliy <vitalij.leontjev@tetrika.school>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
